--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,3 @@
 {
-  "presets": ["es2015", "stage-2"],
-  "plugins": [
-    "transform-function-bind",
-    "transform-export-extensions",
-  ],
+  "presets": ["es2015"]
 }
