--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "rm -rf lib && tsc --outDir lib --declaration --sourceMap",
-    "pre-jest": "rm -rf test && tsc --outDir test",
-    "jest": "jest",
-    "test": "npm run pre-jest && npm run jest"
+    "pretest": "rm -rf test && tsc --outDir test --module commonjs",
+    "test": "mocha test/**/*.spec.js"
   },
   "repository": {
     "url": "https://github.com/stephenbunch/rethinkql",
@@ -16,16 +15,13 @@
   "author": "Stephen Bunch",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^15.1.32",
+    "@types/chai": "^3.4.34",
+    "@types/mocha": "^2.2.32",
+    "@types/rethinkdb": "^1.10.30",
     "babel-preset-es2015": "^6.18.0",
-    "jest": "^16.0.1",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
+    "rethinkdb": "^2.3.3",
     "typescript": "^2.0.6"
-  },
-  "jest": {
-    "coverageDirectory": "coverage/",
-    "collectCoverage": true,
-    "testPathDirs": [
-      "test/"
-    ]
   }
 }
