--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "moduleResolution": "node",
     "noImplicitReturns": true,
     "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "outDir": "lib",
     "preserveConstEnums": true,
     "rootDir": "src",
